<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dp8"
        android:background="@drawable/bg_control_glass"
        android:paddingStart="@dimen/dp16"
        android:paddingTop="@dimen/dp8"
        android:paddingEnd="@dimen/dp8">

        <ImageView
            android:id="@+id/action_close"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:padding="@dimen/dp8"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="UseAppTint,contentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/action_dm_track"
            android:textColor="@color/grey_300"
            android:textSize="@dimen/player_controller_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_dm_track_mode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="16sp"
            android:textColor="@color/grey_300"
            android:textStyle="bold"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="@+id/rg_dm_track_mode"
            android:text="@string/hint_track_mode"/>

        <RadioGroup
            android:id="@+id/rg_dm_track_mode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dp8"
            android:checkedButton="@+id/rb_track_single"
            app:layout_constraintStart_toEndOf="@+id/tv_dm_track_mode"
            app:layout_constraintTop_toTopOf="@+id/tv_dm_track_mode"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rb_track_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_300"
                android:text="@string/hind_track_single_switch"/>

            <RadioButton
                android:id="@+id/rb_track_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_300"
                android:text="@string/hind_track_multi_merge"/>
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp8"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/tv_dm_track_mode"
            app:layout_constraintBottom_toTopOf="@id/cl_action"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/action_select_all"
                style="@style/Widget.Material3.Button.TextButton"
                android:textSize="@dimen/dp16"
                android:textColor="@color/view_accent_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/dp8"
                android:minWidth="@dimen/dp40"
                android:minHeight="@dimen/dp32"
                android:text="@string/action_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpUsage" />
            <Button
                android:id="@+id/action_remove"
                style="@style/Widget.Material3.Button.TextButton"
                android:textSize="@dimen/dp16"
                android:textColor="@color/view_accent_light"
                app:layout_constraintBottom_toBottomOf="@+id/action_select_all"
                app:layout_constraintStart_toEndOf="@id/action_select_all"
                android:minWidth="@dimen/dp40"
                android:minHeight="@dimen/dp32"
                android:text="@string/action_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/action_load"
                style="@style/Widget.Material3.Button.TextButton"
                android:textSize="@dimen/dp16"
                android:textColor="@color/view_accent_light"
                app:layout_constraintBottom_toBottomOf="@id/action_select_all"
                app:layout_constraintEnd_toStartOf="@+id/action_output"
                android:minWidth="@dimen/dp40"
                android:minHeight="@dimen/dp32"
                android:text="@string/action_dm_merge_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/action_output"
                style="@style/Widget.Material3.Button.TextButton"
                android:textSize="@dimen/dp16"
                android:textColor="@color/view_accent_light"
                app:layout_constraintBottom_toBottomOf="@+id/action_select_all"
                app:layout_constraintEnd_toEndOf="parent"
                android:minWidth="@dimen/dp40"
                android:minHeight="@dimen/dp32"
                android:text="@string/action_dm_merge_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>