<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dp8"
        android:background="@drawable/bg_control_glass"
        android:paddingStart="@dimen/dp16"
        android:paddingTop="@dimen/dp8"
        android:paddingEnd="@dimen/dp8">

        <ImageView
            android:id="@+id/action_close"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:padding="@dimen/dp8"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="UseAppTint,contentDescription" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/action_dm_select"
            android:textColor="@color/grey_300"
            android:textSize="@dimen/player_controller_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_dm_lib"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/hint_danmu_lib"
            android:textColor="@color/grey_300"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_marginStart="@dimen/dp8"
            app:drawableStartCompat="@drawable/ic_change_history_24"
            tools:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TextView
                android:id="@+id/default_folder"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp24"
                android:paddingStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/grey_300"
                android:background="@drawable/bg_radius_stroke_6_selector"
                android:text="默认目录"
                />

            <TextView
                android:id="@+id/last_folder"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp24"
                android:paddingStart="@dimen/dp8"
                android:layout_marginStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/default_folder"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/grey_300"
                android:background="@drawable/bg_radius_stroke_6_selector"
                android:text="上次目录"
                />

            <TextView
                android:id="@+id/video_folder"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp24"
                android:paddingStart="@dimen/dp8"
                android:layout_marginStart="@dimen/dp8"
                android:paddingEnd="@dimen/dp8"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/last_folder"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/grey_300"
                android:background="@drawable/bg_radius_stroke_6_selector"
                android:text="视频目录"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp4"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:layout_marginBottom="@dimen/dp8"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_folder" />

        <me.lingci.lib.base.view.FastScroller
            android:id="@+id/fast_scroller"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="visible"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@+id/recycler_view"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_password"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_margin="@dimen/dp8"
        android:background="@drawable/bg_control_glass"
        android:paddingStart="@dimen/dp16"
        android:paddingTop="@dimen/dp8"
        android:paddingEnd="@dimen/dp8"
        android:translationZ="-1dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/action_password"
            android:textColor="@color/grey_300"
            android:textSize="@dimen/player_controller_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/view_accent_light"
            android:layout_marginTop="@dimen/dp8"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/action_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="@dimen/dp16"
            android:textColor="@color/view_accent_light"
            app:layout_constraintTop_toTopOf="@+id/action_confirmed"
            app:layout_constraintEnd_toStartOf="@+id/action_confirmed"
            app:layout_constraintStart_toStartOf="parent"
            android:minWidth="@dimen/dp40"
            android:minHeight="@dimen/dp32"
            android:text="@string/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/action_confirmed"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="@dimen/dp16"
            android:textColor="@color/view_accent_light"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            app:layout_constraintStart_toEndOf="@+id/action_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp8"
            android:minWidth="@dimen/dp40"
            android:minHeight="@dimen/dp32"
            android:text="@string/action_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>